--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico"
+      href="blackonwhite.png"
     />
     <title>Roman Numeral Converter</title>
   </head>
@@ -20,7 +20,7 @@
     <main>
       <img
         class="freecodecamp-logo"
-        src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
+        src="whiteonblack.png"
         alt="freeCodeCamp Logo"
       />
       <h1>Roman Numeral Converter</h1>
